@@ -100,7 +100,7 @@ class Test_Master:
         sim = Master(models, connections)
         assert not sim.algebraic_loops
     
-    def _basic_simulation(self, result_handling):
+    def _basic_simulation(self, opts_update):
         model_sub1 = Dummy_FMUModelCS2([], "LinearCoSimulation_LinearSubSystem1.fmu", cs2_xml_path, _connect_dll=False)
         model_sub2 = Dummy_FMUModelCS2([], "LinearCoSimulation_LinearSubSystem2.fmu", cs2_xml_path, _connect_dll=False)
         
@@ -113,7 +113,7 @@ class Test_Master:
         b2 = model_sub2.values[model_sub2.get_variable_valueref("b2")]
         c2 = model_sub2.values[model_sub2.get_variable_valueref("c2")]
         d2 = model_sub2.values[model_sub2.get_variable_valueref("d2")]
-        
+
         def do_step1(current_t, step_size, new_step=True):
             u1 = model_sub1.values[model_sub1.get_variable_valueref("u1")]
             
@@ -141,8 +141,7 @@ class Test_Master:
        
         opts = master.simulate_options()
         opts["step_size"] = 0.0005
-        opts["result_handling"] = result_handling
-        
+        opts.update(opts_update)
         res = master.simulate(options=opts)
         
         nose.tools.assert_almost_equal(res[model_sub1].final("x1"), 0.0859764038708439, 3)
@@ -150,11 +149,18 @@ class Test_Master:
     
     @testattr(stddist = True)
     def test_basic_simulation_txt_file(self):
-        self._basic_simulation(result_handling="file")
+        opts = {"result_handling":"file"}
+        self._basic_simulation(opts)
     
     @testattr(stddist = True)
     def test_basic_simulation_mat_file(self):
-        self._basic_simulation(result_handling="binary")
+        opts = {"result_handling":"binary"}
+        self._basic_simulation(opts)
+    
+    @testattr(stddist = True)
+    def test_basic_simulation_with_block_initialization(self):
+        opts = {"block_initialization": True}
+        self._basic_simulation(opts)
     
     @testattr(stddist = True)
     def test_integer_connections(self):
