@@ -1,5 +1,7 @@
 --- CHANGELOG ---
 --- TBD: Unreleased ---
+    * Fixed 'block_initialization' in Master algorithm when using 
+      Python 3
     * Fixed so that .initial is set properly on ScalarVariable2.
     * Fixed get_variable_nominal when called for valueref of variable.
     
